--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -3,6 +3,10 @@
   howpublished = {\url{https://towardsdatascience.com/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53}},
   year         = {2021}
 }
+@misc{coefficient,
+  title        = {Sørensen–Dice coefficient},
+  howpublished = {\url{https://en.wikipedia.org/wiki/S%C3%B8rensen%E2%80%93Dice_coefficient}}
+}
 @misc{convolution,
   author       = {Md Nasir Uddin Laskar},
   howpublished = {\url{https://nasirml.wordpress.com/2019/01/08/convnet-in-tensorflow/}},
