--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -99,6 +99,12 @@ morestring=[b]"
 \newpage
 \tableofcontents
 \newpage
+\hspace{0pt}
+\vfill
+{\huge{``I know of over 3,000 ways [that] a light bulb does not work.'' - Thomas A. Edison}}
+\vfill
+\hspace{0pt}
+\newpage
 \section{Wstęp}
 W codziennej pracy wielu lekarzy poświęca czas na manualne liczenie zafarbowanych komórek na zdjęciach.
 Jest to czasochłonne i monotonne zadanie.
