--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage{url}
+\usepackage{hyperref}
 \usepackage{cite}
 \usepackage{color}
 \usepackage{float}
@@ -63,6 +63,13 @@ morestring=[b]"
   breaklines=true,
   breakatwhitespace=true,
   tabsize=4
+}
+
+\hypersetup{
+    colorlinks=true,
+    linkcolor=black,
+    citecolor=blue,
+    urlcolor=blue,
 }
 
 \title{Segmentacja komórek na zdjęciach mikroskopowych skóry z użyciem głębokich sieci neuronowych.}
