--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -31,6 +31,10 @@
   howpublished = {\url{https://stackabuse.com/introduction-to-neural-networks-with-scikit-learn/}},
   year         = {2021}
 }
+@misc{key,
+  author       = {nvidia},
+  howpublished = {\url{https://blogs.nvidia.com/blog/2018/09/05/whats-the-difference-between-a-cnn-and-an-rnn/}}
+}
 @misc{mae,
   title        = {Mean Absolute Error},
   howpublished = {\url{https://en.wikipedia.org/wiki/Mean_absolute_error}}
