--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -12,6 +12,10 @@
   howpublished = {\url{https://nasirml.wordpress.com/2019/01/08/convnet-in-tensorflow/}},
   year         = {2021}
 }
+@misc{diceimpl,
+  author       = {Hadrien Mary},
+  howpublished = {\url{https://github.com/keras-team/keras/issues/3611}}
+}
 @misc{gradient2d,
   author       = {Oleg Alexandrov},
   howpublished = {\url{https://en.wikipedia.org/wiki/File:Gradient_descent.svg}}
