--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -583,7 +583,7 @@ Dla:
 
 Jego zastosowanie to obliczenie podobieństwa dwóch próbek.
 
-\begin{lstlisting}[caption={Implementacja przy użyciu Keras i TensorFlow},language=python]
+\begin{lstlisting}[caption={Implementacja przy użyciu Keras i TensorFlow\cite{diceimpl}},language=python]
 from tensorflow.keras import backend as K
 
 def custom_metric(y_true, y_pred, smooth=1):
