--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -12,6 +12,11 @@
   howpublished = {\url{https://nasirml.wordpress.com/2019/01/08/convnet-in-tensorflow/}},
   year         = {2021}
 }
+@misc{convolution-math,
+  author       = {Piotr Skalski},
+  title        = {Gentle Dive into Math Behind Convolutional Neural Networks},
+  howpublished = {\url{https://towardsdatascience.com/gentle-dive-into-math-behind-convolutional-neural-networks-79a07dd44cf9}}
+}
 @misc{diceimpl,
   author       = {Hadrien Mary},
   howpublished = {\url{https://github.com/keras-team/keras/issues/3611}}
@@ -35,10 +40,6 @@
   howpublished = {\url{https://stackabuse.com/introduction-to-neural-networks-with-scikit-learn/}},
   year         = {2021}
 }
-@misc{key,
-  author       = {nvidia},
-  howpublished = {\url{https://blogs.nvidia.com/blog/2018/09/05/whats-the-difference-between-a-cnn-and-an-rnn/}}
-}
 @misc{mae,
   title        = {Mean Absolute Error},
   howpublished = {\url{https://en.wikipedia.org/wiki/Mean_absolute_error}}
@@ -50,6 +51,13 @@
 @misc{neuron-image,
   author       = {Bruce Blaus},
   howpublished = {\url{https://en.wikipedia.org/wiki/Neuron}}
+}
+@misc{nvidia,
+  author       = {nvidia},
+  howpublished = {\url{https://blogs.nvidia.com/blog/2018/09/05/whats-the-difference-between-a-cnn-and-an-rnn/}}
+}
+@misc{padding,
+  howpublished = {\url{https://blog.xrds.acm.org/wp-content/uploads/2016/06/Figure_3.png}}
 }
 @misc{perceptron-image,
   author       = {Mayranna},
