--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -1,7 +1,8 @@
 @misc{cnn,
   author       = {Sumit Saha},
+  title        = {A Comprehensive Guide to Convolutional Neural Networks — the ELI5 way},
   howpublished = {\url{https://towardsdatascience.com/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53}},
-  year         = {2021}
+  year         = {2018}
 }
 @misc{coefficient,
   title        = {Sørensen–Dice coefficient},
@@ -9,8 +10,9 @@
 }
 @misc{convolution,
   author       = {Md Nasir Uddin Laskar},
+  title        = {Convolutional Neural Networks (CNNs) in TensorFlow},
   howpublished = {\url{https://nasirml.wordpress.com/2019/01/08/convnet-in-tensorflow/}},
-  year         = {2021}
+  year         = {2019}
 }
 @misc{convolution-math,
   author       = {Piotr Skalski},
@@ -54,6 +56,7 @@
 }
 @misc{nvidia,
   author       = {nvidia},
+  title        = {Convolutional Neural Network},
   howpublished = {\url{https://blogs.nvidia.com/blog/2018/09/05/whats-the-difference-between-a-cnn-and-an-rnn/}}
 }
 @misc{padding,
