--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -358,6 +358,15 @@ gdzie:
     \item f - rozmiar filtra
 \end{itemize}
 
+Zastosowaniem tej operacji może być na przykład wykrywanie krawędzi na obrazku lub rozmycie go.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\linewidth]{images/cnn_blur.jpg}
+    \caption{Przykład filtru ``Rozmycie Gaussa''}
+    \cite{cnn_blur}
+\end{figure}
+
 \subsection{Sieci w pełni splotowe}
 Sieciami w pełni splotowymi nazywamy te głębokie sieci neuronowe, które jako wszystkie warstwy posiadają warstwy splotowe.
 Sieci tego typu służą głównie do przekształcania obrazów.
