--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -4,6 +4,9 @@
   howpublished = {\url{https://towardsdatascience.com/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53}},
   year         = {2018}
 }
+@misc{cnn_blur,
+  howpublished = {\url{https://en.wikipedia.org/wiki/Convolution#/media/File:Halftone,_Gaussian_Blur.jpg}}
+}
 @misc{coefficient,
   title        = {Sørensen–Dice coefficient},
   howpublished = {\url{https://en.wikipedia.org/wiki/S%C3%B8rensen%E2%80%93Dice_coefficient}}
