--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -362,7 +362,7 @@ Zastosowaniem tej operacji może być na przykład wykrywanie krawędzi na obraz
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\linewidth]{images/cnn_blur.jpg}
+    \includegraphics[width=\linewidth,height=\linewidth]{images/cnn_blur.jpg}
     \caption{Przykład filtru ``Rozmycie Gaussa''}
     \cite{cnn_blur}
 \end{figure}
