--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -287,6 +287,7 @@ Proces ten opiszemy wzorem:
 \begin{align*}
     w_g^{(m+1)}=w_g^m - \eta\frac{\delta E}{\delta w_g}(w^m)
 \end{align*}
+wykonanym dla wszystkich wag g
 gdzie:
 \begin{itemize}
     \item $\eta$ - współczynnik uczenia (bliski zeru), jest to wartość wskazująca jak ``duży krok'' wykonamy w kierunku wskazanym przez algorytm
@@ -377,6 +378,7 @@ Uczenie maszynowe możemy podzielić na różne podtypy.
 Jednym z nich jest zagadnienie wizji komputerowej.
 Zaznaczenie konturów komórek na zdjęciach mikroskopowych jest problemem segmentacji instancji, która jest częścią tego zagadnienia.
 W celu zrozumienia tego pojęcia przeanalizujemy składające się na niego mniejsze problemy z kategorii widzenia komputerowego.
+Poniższy rozdział powstał na podstawie \cite{unet}
 \subsection{Klasyfikacja}
 Jest to najprostsze zagadnienie w dziedzinie widzenia komputerowego.
 Polega ono na tym, że dla otrzymanego na wejście obrazu sieć ma zwrócić klasę do której przedstawiony na zdjęciu obiekt należy.
