--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -287,8 +287,7 @@ Proces ten opiszemy wzorem:
 \begin{align*}
     w_g^{(m+1)}=w_g^m - \eta\frac{\delta E}{\delta w_g}(w^m)
 \end{align*}
-wykonanym dla wszystkich wag g
-gdzie:
+wykonanym dla wszystkich wag g, gdzie:
 \begin{itemize}
     \item $\eta$ - współczynnik uczenia (bliski zeru), jest to wartość wskazująca jak ``duży krok'' wykonamy w kierunku wskazanym przez algorytm
     \item $w_g^m$ - wektor wag w m-tej warstwie
