--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -5,6 +5,7 @@
   year         = {2018}
 }
 @misc{cnn_blur,
+  author       = {Alex:D},
   howpublished = {\url{https://en.wikipedia.org/wiki/Convolution#/media/File:Halftone,_Gaussian_Blur.jpg}}
 }
 @misc{coefficient,
@@ -42,8 +43,8 @@
 }
 @misc{introduction-nn,
   author       = {Scott Robinson},
-  howpublished = {\url{https://stackabuse.com/introduction-to-neural-networks-with-scikit-learn/}},
-  year         = {2021}
+  title        = {Introduction to Neural Networks with Scikit-Learn},
+  howpublished = {\url{https://stackabuse.com/introduction-to-neural-networks-with-scikit-learn/}}
 }
 @misc{mae,
   title        = {Mean Absolute Error},
@@ -58,11 +59,11 @@
   howpublished = {\url{https://en.wikipedia.org/wiki/Neuron}}
 }
 @misc{nvidia,
-  author       = {nvidia},
   title        = {Convolutional Neural Network},
   howpublished = {\url{https://blogs.nvidia.com/blog/2018/09/05/whats-the-difference-between-a-cnn-and-an-rnn/}}
 }
 @misc{padding,
+  title        = {Padding},
   howpublished = {\url{https://blog.xrds.acm.org/wp-content/uploads/2016/06/Figure_3.png}}
 }
 @misc{perceptron-image,
@@ -71,8 +72,9 @@
 }
 @misc{unet,
   author       = {Harshall Lamba},
+  title        = {Understanding Semantic Segmentation with UNET},
   howpublished = {\url{https://towardsdatascience.com/understanding-semantic-segmentation-with-unet-6be4f42d4b47}},
-  year         = {2021}
+  year         = {2019}
 }
 @article{unetpaper,
   author        = {Olaf Ronneberger and
@@ -93,5 +95,5 @@
   author       = {M. Czoków, J. Piersa, A. Rutkowski},
   title        = {Wstęp do sieci neuronowych.},
   howpublished = {\url{https://www-users.mat.umk.pl//~rudy/wsn}},
-  year         = {2021}
+  year         = {2019/20}
 }
